fix: fixed swagger configuration
