# src/api/swagger.ts
@@ -1,4 +1,6 @@
 import swaggerAutogen from "swagger-autogen";
+import * as dotenv from "dotenv";
+dotenv.config();
 
 const doc = {
    openapi: "3.0.0",
@@ -7,6 +9,7 @@ const doc = {
       title: "Mini Bank API",
       description: "This is a simple API for a mini bank.",
    },
+   host: `localhost:${process.env.PORT || 3000}`,
    tags: [
       {
          name: "Accounts",
@@ -17,256 +20,6 @@ const doc = {
          description: "Endpoints",
       },
    ],
-   paths: {
-      "/accounts/": {
-         post: {
-            tags: ["Accounts"],
-            description: "",
-            responses: {
-               "200": {
-                  description: "Created Successfully",
-                  content: {
-                     "application/json": {
-                        schema: {
-                           $ref: "#/components/schemas/responseCreateAccountSchema",
-                        },
-                     },
-                  },
-               },
-               "201": {
-                  description: "Created",
-               },
-               "400": {
-                  description: "Bad Request",
-               },
-            },
-            requestBody: {
-               required: true,
-               content: {
-                  "application/json": {
-                     schema: {
-                        $ref: "#/components/schemas/createAccountSchema",
-                     },
-                  },
-               },
-            },
-         },
-      },
-      "/accounts/{id}": {
-         get: {
-            tags: ["Accounts"],
-            description: "",
-            parameters: [
-               {
-                  name: "id",
-                  in: "path",
-                  required: true,
-                  schema: {
-                     type: "string",
-                  },
-               },
-            ],
-            responses: {
-               "200": {
-                  description: "OK",
-               },
-               "400": {
-                  description: "Bad Request",
-               },
-            },
-         },
-         put: {
-            tags: ["Accounts"],
-            description: "",
-            parameters: [
-               {
-                  name: "id",
-                  in: "path",
-                  required: true,
-                  schema: {
-                     type: "string",
-                  },
-               },
-            ],
-            responses: {
-               "200": {
-                  description: "OK",
-               },
-               "400": {
-                  description: "Bad Request",
-               },
-            },
-            requestBody: {
-               content: {
-                  "application/json": {
-                     schema: {
-                        type: "object",
-                        properties: {
-                           amount: {
-                              example: "any",
-                           },
-                        },
-                     },
-                  },
-               },
-            },
-         },
-      },
-      "/transactions/": {
-         post: {
-            tags: ["Transactions"],
-            description: "",
-            responses: {
-               "200": {
-                  description: "Create Successfully with status SCHEDULED",
-                  content: {
-                     "application/json": {
-                        schema: {
-                           $ref: "#/components/schemas/responseCreateTransactionSchema",
-                        },
-                     },
-                  },
-               },
-               "201": {
-                  description: "Created",
-               },
-               "400": {
-                  description: "Bad Request",
-               },
-            },
-            requestBody: {
-               required: true,
-               content: {
-                  "application/json": {
-                     schema: {
-                        $ref: "#/components/schemas/createTransactionSchema",
-                     },
-                  },
-               },
-            },
-         },
-         get: {
-            tags: ["Transactions"],
-            description: "",
-            responses: {
-               "200": {
-                  description: "OK",
-               },
-               "400": {
-                  description: "Bad Request",
-               },
-            },
-         },
-      },
-      "/transactions/sender/{id}": {
-         get: {
-            tags: ["Transactions"],
-            description: "",
-            parameters: [
-               {
-                  name: "id",
-                  in: "path",
-                  required: true,
-                  schema: {
-                     type: "string",
-                  },
-               },
-            ],
-            responses: {
-               "200": {
-                  description: "OK",
-               },
-               "400": {
-                  description: "Bad Request",
-               },
-            },
-         },
-      },
-      "/transactions/receiver/{id}": {
-         get: {
-            tags: ["Transactions"],
-            description: "",
-            parameters: [
-               {
-                  name: "id",
-                  in: "path",
-                  required: true,
-                  schema: {
-                     type: "string",
-                  },
-               },
-            ],
-            responses: {
-               "200": {
-                  description: "OK",
-               },
-               "400": {
-                  description: "Bad Request",
-               },
-            },
-         },
-      },
-      "/transactions/{id}": {
-         get: {
-            tags: ["Transactions"],
-            description: "",
-            parameters: [
-               {
-                  name: "id",
-                  in: "path",
-                  required: true,
-                  schema: {
-                     type: "string",
-                  },
-               },
-            ],
-            responses: {
-               "200": {
-                  description: "OK",
-               },
-               "400": {
-                  description: "Bad Request",
-               },
-            },
-         },
-         put: {
-            tags: ["Transactions"],
-            description: "",
-            parameters: [
-               {
-                  name: "id",
-                  in: "path",
-                  required: true,
-                  schema: {
-                     type: "string",
-                  },
-               },
-            ],
-            responses: {
-               "200": {
-                  description: "OK",
-               },
-               "400": {
-                  description: "Bad Request",
-               },
-            },
-            requestBody: {
-               content: {
-                  "application/json": {
-                     schema: {
-                        type: "object",
-                        properties: {
-                           status: {
-                              example: "any",
-                           },
-                        },
-                     },
-                  },
-               },
-            },
-         },
-      },
-   },
    components: {
       schemas: {
          createAccountSchema: {
